Make css changes to homepage Stylize text's fonts and sizes. Position sidebar, header and article items. Add appropriate borders to header and sidebar.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </ul>
         </header>
         <article>
-            <h1>One stop website.</h1>
+            <h1 class="title">One stop website.</h1>
         </article>
     </div>
 </body>
