Add items underneath novel's sidebar list

--- a/index.html
+++ b/index.html
@@ -11,8 +11,15 @@
 
 <body>
     <aside>
-        <ul>
+        <ul class="sidebar-links">
             <li><a href="#">Novels</a></li>
+            <ul class="novel-links">
+                <li><a href="#">Novel 1</a></li>
+                <li><a href="#">Novel 2</a></li>
+                <li><a href="#">Novel 3</a></li>
+                <li><a href="#">Novel 4</a></li>
+                <li><a href="#">Novel 5</a></li>
+            </ul>
             <li><a href="#">Manga</a></li>
             <li><a href="#">Music</a></li>
             <li><a href="#">About</a></li>
