Correctly stylize sidebar

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             </ul>
         </header>
         <article>
-            <h1 class="title">One stop website.</h1>
+            <h1 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h1>
         </article>
     </div>
 </body>
