--- a/index.html
+++ b/index.html
@@ -34,7 +34,16 @@
             </ul>
         </header>
         <article>
-            <h1 class="title">Lorem ipsum dolor sit amet, consectetur adipiscing elit. </h1>
+            <h1 class="title">Lorem ipsum consectetur adipiscing elit. </h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tuo vero id quidem, inquam, arbitratu. At
+                iam
+                decimum annum in spelunca iacet. </p>
+            <p>Neque solum ea communia, verum etiam paria esse dixerunt. Quonam, inquit, modo? Sed nunc, quod
+                agimus;
+                Quodcumque in mentem incideret, et quodcumque tamquam occurreret. Sint modo partes vitae beatae. Sed
+                videbimus. </p>
+
+            <p>Duo Reges: constructio interrete. Non quam nostram quidem, inquit Pomponius iocans; </p>
         </article>
     </div>
 </body>
