Reorganize web files and correct novel-1 styling

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Home | Website</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 
 <body>
@@ -14,7 +14,7 @@
         <ul class="sidebar-links">
             <li><a href="#">Novels</a></li>
             <ul class="novel-links">
-                <li><a href="./novels/novel_1/novel_1.html">Novel 1</a></li>
+                <li><a href="./novels/novel-1.html">Novel 1</a></li>
                 <li><a href="#">Novel 2</a></li>
                 <li><a href="#">Novel 3</a></li>
                 <li><a href="#">Novel 4</a></li>
