--- a/index.html
+++ b/index.html
@@ -14,11 +14,12 @@
         <ul class="sidebar-links">
             <li><a href="#">Novels</a></li>
             <ul class="novel-links">
-                <li><a href="./novels/novel-1.html">Novel 1</a></li>
-                <li><a href="#">Novel 2</a></li>
-                <li><a href="#">Novel 3</a></li>
-                <li><a href="#">Novel 4</a></li>
-                <li><a href="#">Novel 5</a></li>
+                <li><a href="./novels/boogiepop-and-others.html">Boogiepop and Others</a></li>
+                <li><a href="#">Boogiepop Returns: VS Imaginator Part 1</a></li>
+                <li><a href="#">Boogiepop Returns: VS Imaginator Part 2</a></li>
+                <li><a href="#">Boogiepop in the Mirror</a></li>
+                <li><a href="#">Boogiepop Overdrive</a></li>
+                <li><a href="#">Boogiepop at Dawn</a></li>
             </ul>
             <li><a href="#">Manga</a></li>
             <li><a href="#">Music</a></li>
