Make index header stretch responsively

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#">About</a></li>
         </ul>
     </aside>
-    <div class="content">
+    <div class="content container-fluid">
         <header>
             <ul class="header-links">
                 <li><a href="#">Read</a></li>
