Rename article element to main

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <li><a href="#">About</a></li>
             </ul>
         </header>
-        <article>
+        <main>
             <h1 class="title">Lorem ipsum consectetur adipiscing elit. </h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tuo vero id quidem, inquam, arbitratu. At
                 iam
@@ -51,7 +51,7 @@
                 videbimus. </p>
 
             <p>Duo Reges: constructio interrete. Non quam nostram quidem, inquit Pomponius iocans; </p>
-        </article>
+        </main>
     </div>
 </body>
 
