--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <aside>
+    <!-- <aside>
         <ul class="sidebar-links">
             <li><a href="#">Novels</a></li>
             <ul class="novel-links">
@@ -31,7 +31,7 @@
             <li><a href="#">Music</a></li>
             <li><a href="#">About</a></li>
         </ul>
-    </aside>
+    </aside> -->
     <div class="content container-fluid">
         <header>
             <ul class="header-links">
@@ -41,16 +41,9 @@
             </ul>
         </header>
         <main>
-            <h1 class="title">Lorem ipsum consectetur adipiscing elit. </h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Tuo vero id quidem, inquam, arbitratu. At
-                iam
-                decimum annum in spelunca iacet. </p>
-            <p>Neque solum ea communia, verum etiam paria esse dixerunt. Quonam, inquit, modo? Sed nunc, quod
-                agimus;
-                Quodcumque in mentem incideret, et quodcumque tamquam occurreret. Sint modo partes vitae beatae. Sed
-                videbimus. </p>
-
-            <p>Duo Reges: constructio interrete. Non quam nostram quidem, inquit Pomponius iocans; </p>
+            <img src="./img/suema_gradient.png" alt="suema">
+            <h1>About the Series</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
         </main>
     </div>
 </body>
