--- a/index.html
+++ b/index.html
@@ -41,9 +41,11 @@
             </ul>
         </header>
         <main>
-            <img src="./img/suema_gradient.png" alt="suema">
-            <h1>About the Series</h1>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
+            <div class="series-container">
+                <img src="./img/suema_gradient.png" alt="suema">
+                <h1>About the Series</h1>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
+            </div>
         </main>
     </div>
 </body>
