Add author info to html

--- a/index.html
+++ b/index.html
@@ -48,6 +48,13 @@
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
                 </div>
             </div>
+            <div class="author-container">
+                <div class="description">
+                    <h1>About the Author</h1>
+                    <p>Born in 1968, Kadono Kouhei grew up uncertain about his direction in life. He spent a considerable portion of his early years frittering away his youth before somehow ending up writing novels.</p>
+                </div>
+                <img src="./img/kadono_pen.png" alt="kadono icon">
+            </div>
         </main>
     </div>
 </body>
