Rename series-container to description container

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             </ul>
         </header>
         <main>
-            <div class="series-container">
+            <div class="description-container">
                 <img src="./img/suema_gradient.png" alt="suema">
                 <div class="description">
                     <h1>About the Series</h1>
