--- a/index.html
+++ b/index.html
@@ -43,13 +43,13 @@
         <main>
             <div class="description-container">
                 <img id="suema" src="./img/suema_gradient.png" alt="suema">
-                <div class="description">
+                <div class="description left">
                     <h1>About the Series</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
                 </div>
             </div>
             <div class="description-container">
-                <div class="description">
+                <div class="description right">
                     <h1>About the Author</h1>
                     <p>Born in 1968, Kadono Kouhei grew up uncertain about his direction in life. He spent a considerable portion of his early years frittering away his youth before somehow ending up writing novels.</p>
                 </div>
