Add newcomer section

--- a/index.html
+++ b/index.html
@@ -57,6 +57,19 @@
                     <img id="kadono-icon" src="./img/kadono_pen.png" alt="kadono icon">
                 </div>
             </div>
+            <div class="newcomer-container">
+                <div class="description">
+                    <h1>Start now with the first novel entry: Boogiepop and Others</h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. 
+
+                        Occultum facinus esse potuerit, gaudebit; Eam stabilem appellas. Cur haec eadem Democritus? Tibi hoc incredibile, quod beatissimum. Hoc loco tenere se Triarius non potuit. Hoc Hieronymus summum bonum esse dixit. Quis est tam dissimile homini. 
+                    </p>
+                    <form action="./novels/boogiepop-and-others.html" target="_blank">
+                        <input type="submit" value="Start reading" />
+                    </form>
+                </div>
+                <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
+            </div>
         </main>
     </div>
 </body>
