--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                     Occultum facinus esse potuerit, gaudebit; Eam stabilem appellas. Cur haec eadem Democritus? Tibi hoc incredibile, quod beatissimum. Hoc loco tenere se Triarius non potuit. Hoc Hieronymus summum bonum esse dixit. Quis est tam dissimile homini. 
                 </p>
                 <form action="./novels/boogiepop-and-others.html" target="_blank">
-                    <input type="submit" value="Start reading" />
+                    <input class="read-button" type="submit" value="Start reading" />
                 </form>
             </div>
             <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
