Add footing html

--- a/index.html
+++ b/index.html
@@ -71,6 +71,10 @@
             </div>
             <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
         </div>
+        <footer>
+            <p>Home</p>
+            <p>Novel</p>
+        </footer>
     </div>
 </body>
 
