Add initial styling to footer Adding background color, padding and links styling.

--- a/index.html
+++ b/index.html
@@ -72,8 +72,11 @@
             <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
         </div>
         <footer>
-            <p>Home</p>
-            <p>Novel</p>
+            <p class="footer-links home">Home</p>
+            <p class="footer-link">Novel</p>
+            <p class="footer-link">Manga</p>
+            <p class="footer-link">Other</p>
+            <p class="footer-link about">About</p>
         </footer>
     </div>
 </body>
