Give margin to footer links

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
         </div>
         <footer>
-            <p class="footer-links home">Home</p>
+            <p class="footer-link home"><a href="#">Home</a></p>
             <p class="footer-link">Novel</p>
             <p class="footer-link">Manga</p>
             <p class="footer-link">Other</p>
