Add links to footer

--- a/index.html
+++ b/index.html
@@ -73,10 +73,10 @@
         </div>
         <footer>
             <p class="footer-link home"><a href="#">Home</a></p>
-            <p class="footer-link">Novel</p>
-            <p class="footer-link">Manga</p>
-            <p class="footer-link">Other</p>
-            <p class="footer-link about">About</p>
+            <p class="footer-link"><a href="#">Novel</a></p>
+            <p class="footer-link"><a href="#">Manga</a></p>
+            <p class="footer-link"><a href="#">Other</a></p>
+            <p class="footer-link about"><a href="#">About</a></p>
         </footer>
     </div>
 </body>
