Change newcomer section's desc width

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </div>
         </main>
         <div class="newcomer-container">
-            <div class="description">
+            <div class="description newcomer">
                 <h1>Start now with the first novel entry: Boogiepop and Others</h1>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. 
 
