--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <div class="content container-fluid">
         <header>
             <ul class="header-links">
-                <li><a class="header-link" href="#">Read</a></li>
-                <li><a class="header-link" href="#">Other</a></li>
-                <li><a class="header-link" href="#">About</a></li>
+                <li><a href="#">Read</a></li>
+                <li><a href="#">Other</a></li>
+                <li><a href="#">About</a></li>
             </ul>
         </header>
         <main>
