--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
     <div class="content container-fluid">
         <header>
             <ul class="header-links">
-                <li><a href="#">Read</a></li>
+                <li><a href="novels.html">Novels</a></li>
+                <li><a href="#">Manga</a></li>
                 <li><a href="#">Other</a></li>
                 <li><a href="#">About</a></li>
             </ul>
