Add  logo to header

--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
     </aside> -->
     <div class="content container-fluid">
         <header>
+            <a href="#"><img src="./img/home.png" alt="home logo"></a>
             <ul class="header-links">
                 <li><a href="novels.html">Novels</a></li>
                 <li><a href="#">Manga</a></li>
