Make changes to header Set header as flex container and move bottom border from header-links class to header element.

--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </aside> -->
     <div class="content container-fluid">
         <header>
-            <a href="#"><img src="./img/home.png" alt="home logo"></a>
+            <div class="header-logo">
+                <a href="#"><img src="./img/home.png" alt="home logo"></a>
+            </div>
             <ul class="header-links">
                 <li><a href="novels.html">Novels</a></li>
                 <li><a href="#">Manga</a></li>
