Apply new header styling to novels pages

--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
             <li><a href="#">About</a></li>
         </ul>
     </aside> -->
+
     <div class="content container-fluid">
+        <!-- Header -->
         <header>
             <div class="header-logo">
                 <a href="#"><img src="./img/home.png" alt="home logo"></a>
