Add novels link to index footer

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         </div>
         <footer>
             <p class="footer-link home"><a href="#">Home</a></p>
-            <p class="footer-link"><a href="#">Novel</a></p>
+            <p class="footer-link"><a href="./novels.html">Novels</a></p>
             <p class="footer-link"><a href="#">Manga</a></p>
             <p class="footer-link"><a href="#">Other</a></p>
             <p class="footer-link about"><a href="#">About</a></p>
