Add footer to novel page

--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
             </div>
             <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
         </div>
+        <!-- Footer -->
         <footer>
             <p class="footer-link home"><a href="#">Home</a></p>
             <p class="footer-link"><a href="./novels.html">Novels</a></p>
