Fix file formating

--- a/index.html
+++ b/index.html
@@ -44,20 +44,25 @@
                 <p><a href="#">Manga</a></p>
                 <p><a href="#">Other</a></p>
                 <p><a href="#">About</a></p>
-            </ul>
+                </ul>
         </header>
         <main>
             <div class="description-container">
                 <img id="suema" src="./img/suema_gradient.png" alt="suema">
                 <div class="description left">
                     <h1>About the Series</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. </p>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia
+                        naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse
+                        audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio
+                        interrete. </p>
                 </div>
             </div>
             <div class="description-container">
                 <div class="description right">
                     <h1>About the Author</h1>
-                    <p>Born in 1968, Kadono Kouhei grew up uncertain about his direction in life. He spent a considerable portion of his early years frittering away his youth before somehow ending up writing novels.</p>
+                    <p>Born in 1968, Kadono Kouhei grew up uncertain about his direction in life. He spent a
+                        considerable portion of his early years frittering away his youth before somehow ending up
+                        writing novels.</p>
                 </div>
                 <div>
                     <img id="kadono-icon" src="./img/kadono_pen.png" alt="kadono icon">
@@ -67,9 +72,13 @@
         <div class="newcomer-container">
             <div class="description newcomer">
                 <h1>Start now with the first novel entry: Boogiepop and Others</h1>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete. 
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quid dubitas igitur mutare principia
+                    naturae? Tamen a proposito, inquam, aberramus. An eiusdem modi? Nunc haec primum fortasse audientis
+                    servire debemus. Putabam equidem satis, inquit, me dixisse. Duo Reges: constructio interrete.
 
-                    Occultum facinus esse potuerit, gaudebit; Eam stabilem appellas. Cur haec eadem Democritus? Tibi hoc incredibile, quod beatissimum. Hoc loco tenere se Triarius non potuit. Hoc Hieronymus summum bonum esse dixit. Quis est tam dissimile homini. 
+                    Occultum facinus esse potuerit, gaudebit; Eam stabilem appellas. Cur haec eadem Democritus? Tibi hoc
+                    incredibile, quod beatissimum. Hoc loco tenere se Triarius non potuit. Hoc Hieronymus summum bonum
+                    esse dixit. Quis est tam dissimile homini.
                 </p>
                 <form action="./novels/boogiepop-and-others.html" target="_blank">
                     <input class="read-button" type="submit" value="Start reading" />
