--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
         crossorigin="anonymous"></script>
-    <!-- <aside>
+    <aside>
         <ul class="sidebar-links">
             <li><a href="#">Novels</a></li>
             <ul class="novel-links">
@@ -31,8 +31,9 @@
             <li><a href="#">Music</a></li>
             <li><a href="#">About</a></li>
         </ul>
-    </aside> -->
+    </aside>
 
+    <!-- Main content  -->
     <div class="content container-fluid">
         <!-- Header -->
         <header>
