Make changes to responsive content

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                 <p><a href="#">About</a></p>
                 </ul>
         </header>
-        <main>
+        <div class="descriptions-container">
             <div class="description-container">
                 <img id="suema" src="./img/suema_gradient.png" alt="suema">
                 <div class="description left">
@@ -69,7 +69,7 @@
                     <img id="kadono-icon" src="./img/kadono_pen.png" alt="kadono icon">
                 </div>
             </div>
-        </main>
+        </div>
         <div class="newcomer-container">
             <div class="description newcomer">
                 <h1>Start now with the first novel entry: Boogiepop and Others</h1>
@@ -85,7 +85,7 @@
                     <input class="read-button" type="submit" value="Start reading" />
                 </form>
             </div>
-            <img src="./img/and-others-cover.jpg" alt="boogiepop and other s cover">
+            <img src="./img/and-others-cover.jpg" alt="boogiepop and others cover">
         </div>
         <!-- Footer -->
         <footer>
