Add sidebar toggle button

--- a/index.html
+++ b/index.html
@@ -41,6 +41,7 @@
                 <a href="#"><img src="./img/home.png" alt="home logo"></a>
             </div>
             <div class="header-links">
+                <button type="button" class="toggle">Sidebar</button>
                 <p><a href="novels.html">Novels</a></p>
                 <p><a href="#">Manga</a></p>
                 <p><a href="#">Other</a></p>
@@ -96,6 +97,7 @@
             <p class="footer-link about"><a href="#">About</a></p>
         </footer>
     </div>
+    <script src="./scripts/index.js"></script>
 </body>
 
 </html>
