--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             <p class="footer-link about"><a href="#">About</a></p>
         </footer>
     </div>
-    <script src="./scripts/index.js"></script>
+    <script src="./scripts/toggle.js"></script>
 </body>
 
 </html>
